argocd/manifests/service/manifest.yml
---
# Source: nodeservice/templates/service
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: This is a test container. For testing the MPL pipelines, not to be
      deployed anywhere.
  labels:
    name: nodeservice
    app.kubernetes.io/version: pr-1234
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nodeservice
    app.kubernetes.io/instance: nodeservice
    maintainers: MPyL
    maintainer: MPyL
    version: pr-1234
  name: nodeservice
spec:
  ports:
  - name: 8081-webservice-port
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app.kubernetes.io/instance: nodeservice
    app.kubernetes.io/name: nodeservice
  type: ClusterIP
---
# Source: nodeservice/templates/deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    description: This is a test container. For testing the MPL pipelines, not to be
      deployed anywhere.
  labels:
    name: nodeservice
    app.kubernetes.io/version: pr-1234
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nodeservice
    app.kubernetes.io/instance: nodeservice
    maintainers: MPyL
    maintainer: MPyL
    version: pr-1234
  name: nodeservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: nodeservice
      app.kubernetes.io/name: nodeservice
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: nodeservice
        app.kubernetes.io/version: pr-1234
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/name: nodeservice
        app.kubernetes.io/instance: nodeservice
        maintainers: MPyL
        maintainer: MPyL
        version: pr-1234
      name: nodeservice
    spec:
      containers:
      - env: []
        image: ghcr.io/samtheisens/nodeservice:pr-1234
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 99
          httpGet:
            path: /health
            port: port-0
          periodSeconds: 30
          successThreshold: 0
          timeoutSeconds: 20
        name: nodeservice
        ports:
        - containerPort: 8081
          name: port-0
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 512Mi
      serviceAccount: nodeservice
      serviceAccountName: nodeservice
---
# Source: nodeservice/templates/ingress-https-route
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  labels:
    name: nodeservice
    app.kubernetes.io/version: pr-1234
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nodeservice
    app.kubernetes.io/instance: nodeservice
    maintainers: MPyL
    maintainer: MPyL
    version: pr-1234
  name: nodeservice
spec:
  routes:
  - kind: Rule
    match: Host(`nodeservice-1234.test.nl`)
    services:
    - name: nodeservice
      kind: Service
      port: 8081
    middlewares:
    - name: nodeservice-ingress-0-whitelist
    - name: traefik-https-redirect@kubernetescrd
  - kind: Rule
    match: Host(`some.other.host.com`)
    services:
    - name: nodeservice
      kind: Service
      port: 8081
    middlewares:
    - name: nodeservice-ingress-1-whitelist
    - name: traefik-https-redirect@kubernetescrd
  entryPoints:
  - websecure
  tls:
    secretName: le-prod-wildcard-cert
---
# Source: nodeservice/templates/nodeservice-ingress-0-whitelist
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  annotations:
    VPN: 10.0.0.1
  labels:
    name: nodeservice
    app.kubernetes.io/version: pr-1234
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nodeservice
    app.kubernetes.io/instance: nodeservice
    maintainers: MPyL
    maintainer: MPyL
    version: pr-1234
  name: nodeservice-ingress-0-whitelist
spec:
  ipWhiteList:
    sourceRange:
    - 10.0.0.1
---
# Source: nodeservice/templates/nodeservice-ingress-1-whitelist
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  annotations:
    VPN: 10.0.0.1
  labels:
    name: nodeservice
    app.kubernetes.io/version: pr-1234
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: nodeservice
    app.kubernetes.io/instance: nodeservice
    maintainers: MPyL
    maintainer: MPyL
    version: pr-1234
  name: nodeservice-ingress-1-whitelist
spec:
  ipWhiteList:
    sourceRange:
    - 10.0.0.1
